codes/com/craftinginterpreters/lox_s/program02.bnf
program        ::= declaration* EOF 

declaration    ::= varDecl
               | statement 

statement      ::= exprStmt
               | printStmt 

exprStmt       ::= expression ";"
printStmt      ::= "print" expression ";"

varDecl        ::= "var" IDENTIFIER ( "=" expression )? ";" ;
